PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-code-correct-Test-4_9-void_function_return_void/gcc-compile.txt
input.c: In function ‘main’:
input.c:6:4: error: void value not ignored as it ought to be
    6 |  b = do_nothing(5);
      |    ^

return code: 1
